- First stable version.

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished",
+    "onDidChangeConfiguration"
+  ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "statusbartext.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": []
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,12 +23,12 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.92.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
+    "@types/vscode": "^1.92.0",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
+    "@vscode/test-electron": "^2.4.0",
+    "eslint": "^8.57.0",
+    "typescript": "^5.4.5"
   }
 }
